feat(order): implement order retrieval by customer ID
Add a new method to the OrderService to fetch orders based on the customer ID.
This enhances the order management capabilities and allows for better
customer-specific order tracking.

Also, introduce a corresponding method in the OrderRepository for querying
orders by customer ID.